
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amiga"
version = "3.0.0a7"
description = "Analysis of Microbial Growth Assays"
readme = "README.md"
authors = [
    { name = "Firas Midani", email = "fsm.promotions@gmail.com"}
]
license = { text = "GNU GPL v3.0" }
requires-python = ">=3.12.0,<3.13.0"
dependencies = [
    "cycler==0.12.1",
    "cython==3.0.12",
    "decorator==5.2.1",
    "gpy==1.13.2",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.1",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "paramz==0.9.6",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "scipy==1.12.0",
    "seaborn==0.13.2",
    "six==1.17.0",
    "tabulate==0.9.0",  
]

[project.scripts]
amiga = "amiga.amiga:AMiGA"

[project.urls]
Homepage = "https://github.com/firasmidani/amiga"
Documentation = "https://firasmidani.github.io/amiga/"
Repository = "https://github.com/firasmidani/amiga"
Issues = "https://github.com/firasmidani/amiga/issues"
