
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["amiga*"]
exclude = []
namespaces = false

[project]
name = "amiga"
version = "3.0.2"
description = "Analysis of Microbial Growth Assays"
readme = "README.md"
authors = [
    { name = "Firas Midani", email = "fsm.promotions@gmail.com"}
]
license = { text = "GNU GPL v3.0" }
requires-python = ">=3.10.0,<3.13.0"
dependencies = [
    "cycler>=0.11.1",
    "Cython>=3.0.0",
    "decorator>=5.1.0",
    "GPy>=1.10.0",
    "kiwisolver>=1.3.2",
    "matplotlib>=3.5.1",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "paramz>=0.9.5",
    "pyparsing>=3.0.0",
    "python-dateutil>=2.8.2",
    "pytz>=2021.3",
    "scipy>=1.8.0",
    "seaborn>=0.11.2",
    "six>=1.16.0",
    "tabulate>=0.8.8",  
]

[project.scripts]
amiga = "amiga.amiga:AMiGA"

[project.urls]
Homepage = "https://github.com/firasmidani/amiga"
Documentation = "https://firasmidani.github.io/amiga/"
Repository = "https://github.com/firasmidani/amiga"
Issues = "https://github.com/firasmidani/amiga/issues"
